<resources>
    <string name="app_name">TimeCapsuleApp</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- nav bar -->
    <string name="menu_home">主页</string>
    <string name="menu_curvejob">曲线任务</string>
    <string name="menu_task">任务</string>
    <string name="menu_taskclass">任务类</string>
    <string name="menu_period">时间段</string>
    <string name="menu_exceptioninfo">[debug]异常信息</string>
    <string name="menu_setting">用户设置</string>

    <!-- setting -->
    <string name="setting_sync_on">数据同步:开启</string>
    <string name="setting_sync_off">数据同步:关闭</string>


    <!--home-->
    <string name="home_task_ing">任务进行中</string>
    <string name="home_often_task">常用任务</string>
    <string name="home_curve_task">曲线任务</string>
    <string name="home_unoften_task">不常用任务</string>
    <string name="home_curvejob_empty_dowhat">请到智能任务界面添加内容</string>


    <!-- task -->
    <string name="tip_tasklist">现在还没有任务哦，点击创建一个</string>
    <string name="taskmanager_taskclass_text">任务类:</string>
    <string name="taskmanager_taskclass_text_tip">点击选择任务类</string>
    <string name="taskmanager_name_text">名称：</string>
    <string name="taskmanager_desc_text">详情：</string>
    <string name="taskmanager_icon_text">图标：</string>
    <string name="taskmanager_achieveperhour_text">成就值每小时：</string>
    <string name="taskmanager_often_checkbox">是否为常用任务：</string>

    <string name="depend_task_class">所属任务类：</string>
    <!-- taskclass -->
    <string name="tip_taskclasslist">现在还没有任务类哦，点击创建一个</string>
    <string name="button_addnewtaskclass">添加新的任务类</string>
    <string name="taskclassmanager_name_text">类别名称：</string>
    <string name="taskclassmanager_color_text">颜色：</string>

    <!--period-->
    <string name="period_nullhint">这段时间没有任何时间记录</string>
    <string name="period_create_begin_larger_than_end_hint">结束时间不能小于开始时间！</string>

    <string name="periodmanager_begin_text">开始</string>
    <string name="periodmanager_end_text">结束</string>

    <string name="period_menu_pre">〈</string>
    <string name="period_menu_day">日</string>
    <string name="period_menu_week">周</string>
    <string name="period_menu_month">月</string>
    <string name="period_menu_year">年</string>
    <string name="period_menu_next">〉</string>

    <!-- period statistic menu -->
    <string name="period_statistic_menu_pie">饼图统计</string>
    <string name="period_statistic_menu_bar">条形图统计</string>
    <string name="period_statistic_menu_list">时间段列表</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- curve job -->
    <string name="curvejob_sync">同步率：</string>
    <string name="curvejob_cost">预计：</string>
    <string name="curvejob_close">&#xf105;</string>
    <string name="curvejob_open">&#xf107;</string>
    <string name="curvejob_finish">已完成</string>
    <string name="curvejob_empty_dowhat">点击添加内容</string>
    <string name="curvejob_hint_dowhat">请添加内容</string>

    <string name="curvejobcreator_basetime">基准时间</string>

    <!-- icon more info: https://fontawesome.com/cheatsheet/free/solid -->
    <string name="icon_trophy">&#xf091;</string>
    <string name="icon_chart_pie">&#xf200;</string>
    <string name="icon_finish">&#xf00c;</string>
    <string name="icon_trash">&#xf2ed;</string>
    <string name="icon_check">&#xf00c;</string>
    <string name="icon_edit">&#xf304;</string>

    <!-- actionbar title -->
    <string name="actionbar_periodmanager">时间段添加\\修改</string>
    <string name="actionbar_taskmanager">任务添加\\修改</string>
    <string name="actionbar_taskclassmanager">任务类添加\\修改</string>
    <string name="actionbar_curvejobmanager">添加曲线任务</string>
    <string name="actionbar_curvejobcheck">曲线任务</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">用户名不能为空</string>
    <string name="invalid_password">密码不能为空</string>
    <string name="login_failed">登陆失败</string>
</resources>