<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <!--添加fragment要在3个地方进行配置，MainActivity， this，navigation-->
        <item
            android:id="@+id/nav_curvejob"
            android:icon="@drawable/ic_menu_curve"
            android:title="@string/menu_curvejob" />
        <item
            android:id="@+id/nav_period"
            android:icon="@drawable/ic_menu_period"
            android:title="@string/menu_period" />

    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_middle">
        <item
            android:id="@+id/nav_taskclass"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_taskclass" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_task" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_config"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_exceptioninfo"
            android:icon="@drawable/ic_menu_debug"
            android:title="@string/menu_exceptioninfo" />
    </group>
</menu>