<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.unarimit.timecapsuleapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_task"
        android:name="com.unarimit.timecapsuleapp.ui.task.TaskFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/nav_taskclass"
        android:name="com.unarimit.timecapsuleapp.ui.taskclass.TaskClassFragment"
        android:label="@string/menu_taskclass"
        tools:layout="@layout/fragment_taskclass" />
    <fragment
        android:id="@+id/nav_period"
        android:name="com.unarimit.timecapsuleapp.ui.period.PeriodFragment"
        android:label="@string/menu_period"
        tools:layout="@layout/fragment_period" />
    <fragment
        android:id="@+id/nav_exceptioninfo"
        android:name="com.unarimit.timecapsuleapp.ui.exception.ExceptionFragment"
        android:label="@string/menu_exceptioninfo"
        tools:layout="@layout/fragment_exception" />
</navigation>