<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <com.unarimit.timecapsuleapp.ui.common.HorizontalMenuItem
        android:id="@+id/period_menu_item_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/period_menu_pre"/>
    <com.unarimit.timecapsuleapp.ui.common.HorizontalMenuItem
        android:id="@+id/period_menu_item_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/period_menu_day"/>
    <com.unarimit.timecapsuleapp.ui.common.HorizontalMenuItem
        android:id="@+id/period_menu_item_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/period_menu_week"/>
    <com.unarimit.timecapsuleapp.ui.common.HorizontalMenuItem
        android:id="@+id/period_menu_item_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/period_menu_month"/>
    <com.unarimit.timecapsuleapp.ui.common.HorizontalMenuItem
        android:id="@+id/period_menu_item_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/period_menu_year"/>
    <com.unarimit.timecapsuleapp.ui.common.HorizontalMenuItem
        android:id="@+id/period_menu_item_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/period_menu_next"/>
</LinearLayout>